--- a/AUTHORS
+++ b/AUTHORS
@@ -34,3 +34,4 @@ Shawn M Moore <sartak@gmail.com>
 Edward Funnekotter <efunneko@gmail.com>
 Cornelius Lin <c9s@aiink.com>
 Todd Chapman <todd@chaka.net>
+Jason May <jason.a.may@gmail.com>
