--- a/AUTHORS
+++ b/AUTHORS
@@ -35,3 +35,4 @@ Edward Funnekotter <efunneko@gmail.com>
 Cornelius Lin <c9s@aiink.com>
 Todd Chapman <todd@chaka.net>
 Jason May <jason.a.may@gmail.com>
+Stanislav Sinyagin <ssinyagin@k-open.com>
