Add myself to AUTHORS
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@4903 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/AUTHORS
+++ b/AUTHORS
@@ -36,3 +36,4 @@ Cornelius Lin <c9s@aiink.com>
 Todd Chapman <todd@chaka.net>
 Jason May <jason.a.may@gmail.com>
 Stanislav Sinyagin <ssinyagin@k-open.com>
+Tomohiro Hosaka <bokutin@bokut.in>
