Complain loudly about back-compat when an action is denied. Changelog the Jifty::API changes.
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@4926 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,13 @@
+Jifty $NEXT
+
+BACKWARDS COMPATIBILITY
+====
+ * Deny all actions during GET requests. Applications must now whitelist safe
+   actions. - Sartak
+ * The action API is now split between "runnable" and "inspectable". The REST
+   interface used to use the former, now it uses the latter. - Sartak
+
+
 Jifty 0.71129
 
 I18N
