--- a/lib/Jifty/Manual/AccessControl.pod
+++ b/lib/Jifty/Manual/AccessControl.pod
@@ -18,7 +18,7 @@ On C<_value()> or C<I<somefieldname>>, we reject the operation
 if C<current_user_can('read')> returns false.
 
 On C<_set()> or C<I<set_somefieldname>>, we reject the operation
-if C<current_user_can('write')> returns false.
+if C<current_user_can('update')> returns false.
 
 
 On C<delete()>, we reject the operation if C<current_user_can('delete')>
