--- a/lib/Jifty/Manual/Actions.pod
+++ b/lib/Jifty/Manual/Actions.pod
@@ -234,7 +234,7 @@ textual message describing the result of running the action.
 Thus, if your action failed for some reason, you would, in
 C<take_action>, write code like:
 
-    $self->result->error('Couldn't write blog post');
+    $self->result->error('Could not write blog post');
     return;
 
 If, however, the action completed successfully, you might write:
